force-app/main/default/objects/Previous_Years_Sales_History__c/Previous_Years_Sales_History__c.object-meta.xml
<CustomObject>
    <label>Previous Years Sales History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Previous Years Sales History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previous Years Sales Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>