force-app/main/default/objects/Previous_Years_Sales_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Previous Years Sales Histories</relationshipLabel>
    <relationshipName>Previous_Years_Sales_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>