force-app/main/default/objects/Previous_Years_Sales_History__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>This field is used to capture the Sales date on a monthly basis</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>