force-app/main/default/objects/Previous_Years_Sales_History__c/fields/Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Market_Share__c</fullName>
    <formula>LEFT(TEXT(IF( ISBLANK(Market_Units__c), 0, (Zimmer_Units__c / Market_Units__c) *100)),4) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Share</label>
    <type>Text</type>
</CustomField>