force-app/main/default/objects/Previous_Years_Sales_History__c/fields/Market_Units__c.field-meta.xml
<CustomField>
    <fullName>Market_Units__c</fullName>
    <label>Market Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>