force-app/main/default/objects/Previous_Years_Sales_History__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Segment</label>
    <type>TextArea</type>
</CustomField>