force-app/main/default/objects/Previous_Years_Sales_History__c/fields/SubSegment__c.field-meta.xml
<CustomField>
    <fullName>SubSegment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SubSegment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>